# amperspiegel

./: .gitignore  .travis.yml  ApplyRuleSet.hs  ChangeLog.md  LICENSE  ParseRulesFromTripleStore.hs  ParseToRelations.hs  README  README.md  Relations.hs  RuleSetFromTripleStore.hs  SimpleHelperMonads.hs  TokenAwareParser.hs  Tokeniser.hs  _TripleStore_obsolete.hs  amperspiegel.cabal  amperspiegel.hs  boot.ASL  boot2.ASL  compiler.ASL  demo.txt  fathers.txt  fathers2.txt  haskellOverview.txt  helloWorld.ASL  helloWorld1.ASL  helloWorld2.ASL  helloWorld3.ASL  helloWorld4.ASL  stack.lts7.yaml
Archimate/: Archisurance.xml  archi.cfg  convert.sh  xml.cfg
base/: BaseState.hs  asParser.ASL  basic.cfg  boot.ASL  bootstrap.sh  cfg.ASL  pretty.cfg
demo/: boot.ASL  boot2.ASL  demo.sh  expressions.ASL  fathers.txt  helloWorld1.ASL  helloWorld2.ASL  helloWorld4.ASL
proofs/: CategoricalGraphRewriting.thy  CombinedCorrectness.thy  GraphRewriting.thy  LabeledGraphSemantics.thy  LabeledGraphs.thy  MissingCategory.thy  MissingRelation.thy  ROOT  RuleSemanticsConnection.thy  RulesAndChains.thy  StandardModels.thy  StandardRules.thy  VariableUnification.thy
src/: ApplyRuleSet.hs  Helpers.hs  ParseRulesFromTripleStore.hs  Relations.hs  RuleSet.hs  RuleSetFromTripleStore.hs  SimpleHelperMonads.hs  TokenAwareParser.hs  Tokeniser.hs  amperspiegel.hs
test/: asParser.err  asParser.result  asParser.test  demo.err  demo.result  demo.test  exRAMICS.cfg  helloWorld5.ASL  prettyPrinting.result  prettyPrinting.test  quoting.ASL  quoting.result  quoting.test  rebuild_tests.sh  stringEquality.ASL  stringEquality.err  stringEquality.result  stringEquality.test  switches.err  switches.result  switches.test  test_all.sh
