name:                amperspiegel
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/sjcjoosten/amperspiegel
license:             GPL-3
license-file:        LICENSE
author:              sjcjoosten
maintainer:          sjcjoosten+github@gmail.com
copyright:           Sebastiaan Joosten 2016
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable amperspiegel
  main-is:             amperspiegel.hs
  other-modules:       RuleSet,
                       Helpers,
                       ParseRulesFromTripleStore,
                       TokenAwareParser
  other-extensions:    BangPatterns, OverloadedStrings, ScopedTypeVariables, DeriveFunctor, DeriveTraversable, FlexibleInstances, FlexibleContexts, TypeFamilies, RankNTypes, DeriveFoldable, TypeSynonymInstances
  build-depends:       base >=4.9 && <4.10,
                       containers >=0.5 && <0.6,
                       Earley >=0.11 && <0.12, 
                       mtl >=2.2 && <2.3,
                       terminal-size >= 0.3.2.1,
                       text >=1.2 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
